refactor: align database seeder with domain rules